--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>This is<br />
 						Frank Sun</h1>
-						<p>A student from UVA <br /> 
+						<p>A student from Uva <br /> 
 						4th year major in <a href="https://baidu.com">Architecture</a> and <a href="https://baidu.com">Computer Science</a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
